[project]
name = "ieee-cis-fraud-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "hxastur",email = "arz.mikhail@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "polars (>=1.37.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "kaggle (>=1.8.3,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "pyarrow (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
